# rust-stellar-wallet

./: Cargo.toml  README.md
.stellar/identity/: M4N0V3Y.toml
app/wallet-app/: Cargo.toml
app/wallet-app/src/: main.rs
contracts/counter_contract/: Cargo.toml
contracts/counter_contract/src/: lib.rs
tests/wallet_tests/: Cargo.toml
tests/wallet_tests/src/: lib.rs
utilities/stellar-wallet-tools/: Cargo.toml
utilities/stellar-wallet-tools/src/: lib.rs
